--- a/src/energy.tex
+++ b/src/energy.tex
@@ -585,14 +585,14 @@ using \eqref{eq:budget_efix}. With {\em{state-updating}} ({\tt{ftype=1}}) (i.e. 
 
 {\color{red}{
 \subsubsection{2D structure of TE errors}
-Figure \ref{fig:2d_te} shows the two-dimensional spatial structure of column-integrated TE tendencies for for the {\em{default}} configuration. The first plot (Figure \ref{fig:2d_te}a) shows column integrated $\partial E^{(param)}$, i.e. the spatial structure of `physical' TE tendency. Only contours from $\pm 150W/m^2$are shown although the actual range (noted above color bar) is -148.3$W/m^2$ to 1770$W/m^2$. The larger positive values occur only at a small number of grid points (e.g., mountains of New Guinea). The column-integrated dynamical core TE tendency  $\partial \gi{E}^{(adiab)}$ (Figure \ref{fig:2d_te}c) approximately balances $\partial E^{(param)}$. The TE pressure work error tendency $\partial E^{(pwork)}$ (Figure \ref{fig:2d_te}b) is, as expected, largest where precipitation and evaporation is largest. The last 3 plots show terms in the dynamical core budget: column-integrated TE tendency for hyperviscosity [XXXXXXXXX fix fix fix fix], $\partial \gi{E}^{(hvis)}$, vertical remapping, $\partial \gi{E}^{(remap)}$, and frictional heating, $\partial \gi{E}^{(fheat)}$. Compared to $\partial E^{(param)}$ the hyperviscosity tendencies $\partial \gi{E}^{(hvis)}$ are very large meaning that the frictionless adiabatic dynamical core creates very large TE tendencies (not shown) that are, to a large degree, compensated for by the hyperviscosity operators. Otherwise the total dynamical core TE tendencies would be equally large. The frictional heating TE tendency is largest over/near topography. Similarly for vertical remapping but, in addition, there are large TE tendencies in areas of large updrafts/downdrafts over ocean.
+Figure \ref{fig:2d_te} shows the two-dimensional spatial structure of column-integrated TE tendencies for for the {\em{default}} configuration. The first plot (Figure \ref{fig:2d_te}a) shows column integrated $\partial E^{(param)}$, i.e. the spatial structure of `physical' TE tendency. Only contours from $\pm 150W/m^2$are shown although the actual range (noted above color bar) is -148.3$W/m^2$ to 1770$W/m^2$. The larger positive values occur only at a small number of grid points (e.g., mountains of New Guinea). The column-integrated dynamical core TE tendency  $\partial \gi{E}^{(adiab)}$ (Figure \ref{fig:2d_te}c) approximately balances $\partial E^{(param)}$. The TE pressure work error tendency $\partial E^{(pwork)}$ (Figure \ref{fig:2d_te}b) is, as expected, largest where precipitation and evaporation is largest. The last 3 plots show terms in the dynamical core budget: column-integrated TE tendency from the 2D adiabatic dynamical core, $\partial \gi{E}^{(2D)}$, vertical remapping, $\partial \gi{E}^{(remap)}$, and frictional heating, $\partial \gi{E}^{(fheat)}$. The adiabatic dynamical core TE tendency is dominated by the tendencies from the floating Lagrangian (quasi-horizonal) dynamics. The frictional heating TE tendency is largest over/near topography. Similarly for vertical remapping but, in addition, there are large TE tendencies in areas of large updrafts/downdrafts over ocean.
 %
 \begin{figure}[h]
 % \centering
 % when using pdflatex, use pdf file:
 \centering
  \includegraphics[width=35pc]{te.pdf}
-\caption{{\color{red}{Two-dimensional spatial structure of column-integrated TE tendencies for different terms in the TE tendency budget using the {\em{default}} configuration: Column-integrated (a) $\partial E^{(param)}$, (b) $\partial E^{(pwork)}$, (c) $\partial E^{(adiab)}$, (d) $\partial E^{(hvis)}$, (e) $\partial E^{(remap)}$, and (f) $\partial E^{(fheat)}$. Above each color bar the global minimum and maximum TE tendencies are noted as there are small number of grid points where the TE tendencies are much larger than the color bar range.}}}
+\caption{{\color{red}{Two-dimensional spatial structure of column-integrated TE tendencies for different terms in the TE tendency budget using the {\em{default}} configuration: Column-integrated (a) $\partial E^{(param)}$, (b) $\partial E^{(pwork)}$, (c) $\partial E^{(adiab)}$, (d) $\partial E^{(2D)}$, (e) $\partial E^{(remap)}$, and (f) $\partial E^{(fheat)}$. Above each color bar the global minimum and maximum TE tendencies are noted as there are small number of grid points where the TE tendencies are much larger than the color bar range.}}}
 \label{fig:2d_te}
 \end{figure}
 
