spell check and minor mods

--- a/src/energy.tex
+++ b/src/energy.tex
@@ -268,12 +268,12 @@ We note that earlier versions of CAM using the spectral transform dynamical core
 \subsection{{\color{red}{Some remarks on local energy conservation}}}
 {\color{red}{Although this paper focuses on global average TE errors, it is important to note that energy errors occur locally. For example, when an air parcel gains or loses water via evaporation or precipitation (or via a fixer or borrower to maintain some physical property like positive definiteness), there are implications for the mass and heat content, and heat capacity of the parcel. In turn, that affects the energy and mass of the column and thereby affects the global TE budget. So anything that changes these state variables locally has implications for the TE budget. 
 
-An example of an inconsistency in CAM physics is that surface pressure is held fixed during physical parameterization updates but water vapor, and hence surface pressure, does change during evaporation/precipitation and an inconsistency appears in the mass and energy budget (see item 2 in Section \ref{subsec:spuriousE}). Similarly, if a `clipper' is used on water vapor or condensates to avoid (unphysical) negative mixing ratios (more details in section \ref{se:pdc_problem}) and this is not accounted for in the thermodynamics or through a surface flux, that `clipping' will produce an energy source via the mass-weightening in the TE vertical integral. In the dynamical core TE is not conserved locally in each column as there is a horizontal flux of energy between columns; but the local energy budget should, ideally, be closed and thereby globally TE should be conserved. If a dynamical core does not inherently conserve dry air mass and/or water mass then a spurious source of TE is inevitable again trhough the mass-weightening in the vertical integral (unless fixers are applied).}} 
+An example of an inconsistency in CAM physics is that surface pressure is held fixed during physical parameterization updates but water vapor, and hence surface pressure, does change during evaporation/precipitation and an inconsistency appears in the mass and energy budget (see item 2 in Section \ref{subsec:spuriousE}). Similarly, if a `clipper' is used on water vapor or condensates to avoid (unphysical) negative mixing ratios (more details in section \ref{se:pdc_problem}) and this is not accounted for in the thermodynamics or through a surface flux, that `clipping' will produce an energy source via the mass-weightening in the TE vertical integral. In the dynamical core TE is not conserved locally in each column as there is a horizontal flux of energy between columns; but the local energy budget should, ideally, be closed and thereby globally TE should be conserved. If a dynamical core does not inherently conserve dry air mass and/or water mass then a spurious source of TE is inevitable again through the mass-weightening in the vertical integral (unless fixers are applied).}} 
                
 \subsection{Spurious energy sources and sinks}\label{subsec:spuriousE}
 In a weather/climate model TE conservation errors can appear in many places throughout the algorithm. Below is a general list of where conservation errors can appear with specific examples from CAM:
 \begin{enumerate}
-\item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget {\color{red}{; for example, they may not have been designed to conserve TE as defined in the model or they may conserve a TE defined differently}}. CAM parameterizations are required to have a closed energy budget {\color{red}{(based on the discrete TE definition in CAM)}} under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the TE change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. {\footnote{{\color{red}{If not, a fixer needs to ba applied since the CAM global fixer as implemented does not include any errors from the parameterizations. For example, in CAM parameterizations occasionally produce negative water vapor. Tese are filled without compensation and therefore affect the TE.}} }}
+\item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget {\color{red}{; for example, they may not have been designed to conserve TE as defined in the model or they may conserve a TE defined differently}}. CAM parameterizations are required to have a closed energy budget {\color{red}{(based on the discrete TE definition in CAM)}} under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the TE change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. {\footnote{{\color{red}{If not, a fixer needs to be applied since the CAM global fixer as implemented does not include any errors from the parameterizations. For example, in CAM parameterizations occasionally produce negative water vapor. These are filled without compensation and therefore affect the TE.}} }}
 \item {\em{Pressure work {\color{red}{error}}}}: That said, if parameterizations update specific humidity then the surface pressure changes (e.g., moisture entering or leaving the column). In that case the pressure changes which, in turn, changes TE. This is referred to as {\em{pressure work {\color{red}{error}}}} \citep[section 3.1.8 in ][]{CAM5}.
 \item {\em{Continuous TE formula discrepancy}}:  If the continuous equations of motion for the dynamical core conserve a TE different from the one used in the parameterizations then an energy inconsistency is present in the system as a whole. This is the case with the new version of CAM-SE that conserves a TE that is more accurate and comprehensive than that used in the CAM physics package as discussed above. As also noted above, this mismatch arose from the evolutionary nature of the model development and not by deliberate design; and should be eliminated in the future.
 \item {\em{Dynamical core errors}}: Energy conservation errors in the dynamical core, not related to physics-dynamics coupling errors, can arise in multiple parts of the algorithms used to solve the equations of motion. For dynamical cores employing filtering \citep[e.g., limiters in flux operators ][]{L2004MWR} and/or possessing inherent damping which controls small scales, it is hard to isolate their energy dissipation from other errors in the discretization. If a hyperviscosity term or some other diffusion is added to the momentum equation, then one can diagnose the local energy dissipation from such damping and add a corresponding heating to balance it (frictional heating). There may also be energy loss from viscosity applied to other variables such a temperature or pressure which is harder to compensate. Here is a beak-down relevant to CAM-SE using a floating Lagrangian vertical coordinate:
@@ -290,13 +290,13 @@ In a weather/climate model TE conservation errors can appear in many places thro
     is not conserved. Henceforth we assume that the dynamical core is based on an inherently mass-conservative formulation which is the case for CAM-SE and CAM-FV.}}    
 \item \label{item:pdc}{\em{Physics-dynamics coupling (PDC)}}: Assume that physics computes a tendency. Usually the tendency (forcing) is passed to the dynamical core which is responsible for adding the tendencies to the state. PDC energy errors can be split into three types:
 \begin{itemize}
-\item {\em{`Dribbling' errors (or, equivalently, temporal PDC errors)}}: If the TE increment from the parameterizations does not match the change in TE when the tendencies are added to the state in the dynamical core, then there will be a spurious PDC error. This will not happen with the {\em{state-update}} approach in which the tendencies are added immediately after physics and before the dynamical core advances the solution in time. {\color{red}{The PDC `dribblin' errors can be split into 3 contributions:}}.
+\item {\em{`Dribbling' errors (or, equivalently, temporal PDC errors)}}: If the TE increment from the parameterizations does not match the change in TE when the tendencies are added to the state in the dynamical core, then there will be a spurious PDC error. This will not happen with the {\em{state-update}} approach in which the tendencies are added immediately after physics and before the dynamical core advances the solution in time. {\color{red}{The PDC `dribbling' errors can be split into 3 contributions:}}.
 
   {\color{red}{{\em{Thermal energy `dribbling' error}}: PDC errors in temperature tendencies occur because the $T$-increment (call it $\Delta T$) that the parameterizations prescribe leads to a dry thermal energy change of $\Delta M^{(d)}\Delta T$ which will not match the equivalent dry thermal energy change when the temperature tendency is added in smaller chunks in the dynamical core during the `dribbling' of  $\Delta T$. The discrepancy occurs because $\Delta M^{(d)}$ changes during each dynamics time-step and hence the thermal energy change due to physics forcing accumulated during the `dribbling' will not equal $\Delta M^{(d)}\Delta T$. This error could possibly be eliminated by using thermal energy forcing instead of temperature increments. 
 
 {\em{Kinetic energy `dribbling' error}}: Similarly, PDC errors in velocity component forcing increments $(\Delta u, \Delta v)$ occur because the dry kinetic energy change of $\Delta M^{(d)}\left[ \left( \Delta u\right)^2+\left( \Delta v\right)^2\right]$ will not match the equivalent dry kinetic energy change when `dribbling' velocity component forcing increments $(\Delta u, \Delta v)$. It is less clear how to eliminate this error as kinetic energy is a quadratic quantity.
 
-{\em{Mass `clipping' (affects all TE terms)}}: A similar PDC error for mass-variables such as vapor vapor forcing, cloud liquid, etc. can occur when the mass-tendencies are `dribbled' during the dynamical core integration. The dynamical core transport of mass variables will move mass around in the horizonal and vertical while the `dribbled' physics mass increments are applied in the same location; in that situation a negative mass-increment from the parameterizations may be larger than the mass available to remove. This can lead to a spurious source mass if there is logic in the dynamical core preventing mixing ratios/mass to become negative. This is referred to as `clipping' PDC errors and preocess is described/discussed in detail in Section \ref{sec:noise}. The `clipping' changes the water mass budget without accounting for it in water fluxes or in the thermodynamics and hence lead to a TE conservation errors (both kinetic and thermal energy). }}
+{\em{Mass `clipping' (affects all TE terms)}}: A similar PDC error for mass-variables such as vapor vapor forcing, cloud liquid, etc. can occur when the mass-tendencies are `dribbled' during the dynamical core integration. The dynamical core transport of mass variables will move mass around in the horizonal and vertical while the `dribbled' physics mass increments are applied in the same location; in that situation a negative mass-increment from the parameterizations may be larger than the mass available to remove. This can lead to a spurious source mass if there is logic in the dynamical core preventing mixing ratios/mass to become negative. This is referred to as `clipping' PDC errors and the process is described/discussed in detail in Section \ref{sec:noise}. The `clipping' changes the water mass budget without accounting for it in water fluxes or in the thermodynamics and hence lead to a TE conservation errors (both kinetic and thermal energy). }}
 \item {\em{Change of vertical grid/coordinate errors}}: If the vertical coordinates in physics and in the dynamical core are different then there can be spurious PDC energy errors even when using the state-update method for adding tendencies to the dynamical core state. For example, many non-hydrostatic dynamical cores \citep[e.g.][]{MPASatm} use a terrain-following height coordinate whereas physics uses pressure.
 \item {\em{Change of horizontal grid errors:}} If the physics tendencies are computed on a different horizontal grid than the dynamical core then there can be spurious energy errors from mapping tendencies and/or variables between horizontal grids \citep[e.g., ][]{HetAl2018MWR}. 
 \end{itemize}
@@ -314,7 +314,7 @@ Before defining the individual terms in detail we briefly review the model time 
 
 The forcing (physics tendency) from the parameterizations is passed to the dynamical core. If the physics and dynamics operate on different grids, the forcing is remapped here. The dynamics operates on a shorter time step {\color{red}{than}} the physics and is sub-stepped. The remapped {\color{red}{physics increment}} is applied to the dynamics state, saved from the end of the previous dynamics step, using either {\em{state-updating}}, {\em{dribbling}}, or {\em{combination}} as described in the introduction. The dynamics then advances the adiabatic frictionless flow in the floating Lagrangian layers over a further set of sub-steps. Hyperviscosity is applied next with further sub-stepping required for computational stability of the explicit discrete approximations. The energy loss from the specified momentum viscosity is {\color{red}{calculated}} locally and is balanced by adding a local change to the temperature, referred to as {\em{frictional heating}}. This set of dynamics sub-steps is followed by the vertical remapping from Lagrangian to Eulerian reference layers. The remapping is required to provide layers consistent with the parameterization formulations. The vertical remapping sub-steps are required for stability if the Lagrangian layers become too thin.
 
-At the end of the dynamics, the state is saved to be used by the dynamics the next time step and is also passed to the physics, with a remapping if the dynamics and physics grids differ. At the beginning of the physics the difference in energy between this state and the state saved after the physics during the previous time step is the amount needed to be added or subtracted by the energy fixer. It represents the accumulation of all spurious sources from the dry mass correction, remappings between physics and dynamics grids (if applicable), dynamical core, differing energy definitions (if present), hyerviscosity, and vertical remapping.
+At the end of the dynamics, the state is saved to be used by the dynamics the next time step and is also passed to the physics, with a remapping if the dynamics and physics grids differ. At the beginning of the physics the difference in energy between this state and the state saved after the physics during the previous time step is the amount needed to be added or subtracted by the energy fixer. It represents the accumulation of all spurious sources from the dry mass correction, remappings between physics and dynamics grids (if applicable), dynamical core, differing energy definitions (if present), hyperviscosity, and vertical remapping.
 
 
 
@@ -585,7 +585,7 @@ using \eqref{eq:budget_efix}. With {\em{state-updating}} ({\tt{ftype=1}}) (i.e. 
 
 {\color{red}{
 \subsubsection{2D structure of TE errors}
-Figure \ref{fig:2d_te} shows the two-dimensional spatial structure of column-integrated TE tendencies for for the {\em{default}} configuration. The first plot (Figure \ref{fig:2d_te}a) shows column integrated $\partial E^{(param)}$, i.e. the spatial structure of `physical' TE tendency. Only contours from $\pm 150W/m^2$are shown although the actual range (noted above color bar) is -148.3$W/m^2$ to 1770$W/m^2$. The larger positive values occur only at a small number of grid points (e.g., mountains of New Guinea). The column-integrated dynamical core TE tendency  $\partial \gi{E}^{(adiab)}$ (Figure \ref{fig:2d_te}c) approximately balances $\partial E^{(param)}$; this is expected in an AMIP simulation that, if integrated long enough, should reach radiative equilibrium.  The TE pressure work error tendency $\partial E^{(pwork)}$ (Figure \ref{fig:2d_te}b) is, as expected, largest where precipitation and evaporation is largest. The last 3 plots show terms in the dynamical core budget: column-integrated TE tendency from the 2D adiabatic dynamical core, $\partial \gi{E}^{(2D)}$, vertical remapping, $\partial \gi{E}^{(remap)}$, and frictional heating, $\partial \gi{E}^{(fheat)}$. The adiabatic dynamical core TE tendency is dominated by the tendencies from the floating Lagrangian (quasi-horizonal) dynamics. The frictional heating TE tendency is largest over/near topography. Similarly for vertical remapping but, in addition, there are large TE tendencies in areas of large updrafts/downdrafts over ocean.
+Figure \ref{fig:2d_te} shows the two-dimensional spatial structure of column-integrated TE tendencies for for the {\em{default}} configuration. The first plot (Figure \ref{fig:2d_te}a) shows column integrated $\partial E^{(param)}$, i.e. the spatial structure of `physical' TE tendency. Only contours from $\pm 150W/m^2$ are shown although the actual range (noted above color bar) is -148.3$W/m^2$ to 1770$W/m^2$. The larger positive values occur only at a small number of grid points (e.g., mountains of New Guinea). The column-integrated dynamical core TE tendency  $\partial \gi{E}^{(adiab)}$ (Figure \ref{fig:2d_te}c) approximately balances $\partial E^{(param)}$; this is expected in an AMIP simulation that, if integrated long enough, should reach radiative equilibrium.  The TE pressure work error tendency $\partial E^{(pwork)}$ (Figure \ref{fig:2d_te}b) is, as expected, largest where precipitation and evaporation is largest. The last 3 plots show terms in the dynamical core budget: column-integrated TE tendency from the 2D adiabatic dynamical core, $\partial \gi{E}^{(2D)}$, vertical remapping, $\partial \gi{E}^{(remap)}$, and frictional heating, $\partial \gi{E}^{(fheat)}$. The adiabatic dynamical core TE tendency is dominated by the tendencies from the floating Lagrangian (quasi-horizonal) dynamics. The frictional heating TE tendency is largest over/near topography. Similarly for vertical remapping but, in addition, there are large TE tendencies in areas of large updrafts/downdrafts over ocean.
 %
 \begin{figure}[h]
 % \centering
@@ -627,7 +627,7 @@ In CAM physics the parameterizations have, by design, a closed energy budget (ch
 
 By further breaking down the TE dissipation in the SE dynamical core it is observed the vertical remapping accounts for only $\sim-0.01W/m^2$. That said, if the shape-preserving limiters in the vertical remapping are invoked the TE dissipation increases 20-fold to $\sim-0.2W/m^2$. In CAM-SE the kinetic energy dissipation is added as heating in the thermodynamic equation (also referred to as frictional heating). The frictional heating remains very stable across configurations that include moisture ($\sim 0.5W/m^2$) and reduces drastically for dry atmosphere setups (factor 4 reduction to ($\sim 0.12W/m^2$)). Hence this term is an important term in the TE budget. The TE budget for the dynamical core is dominated by TE change due to hyperviscosity; TE errors due to time-truncation and frictionless equations of motion are negligible. Errors associated with physics-dynamics coupling (if applicable) are approximately $0.5W/m^2$. Due to the evolutionary nature of model development the SE dynamical core's continuous equation of motion conserve a more comprehensive TE compared to the physical parameterizations. This TE discrepancy leads to an approximately $0.5W/m^2$ total energy source. Running physics on a different grid than the dynamical introduces TE mapping errors such as in CAM-SE-CSLAM (Conservative Semi-Lagrangian Multi-tracer transport scheme). These errors are, however, rather small $-0.07W/m^2$.
 
-A purpose of this paper is to better understand the energy characteristics of CAM and to encourage modeling groups to perform similar analysis to better understand the total energy flow in the atmospheric component of Earth system models. As has been demonstrated in this paper there can easily be compensating errors in the system which can not be identified without a detailed TE analysis.
+A purpose of this paper is to better understand the energy characteristics of CAM and to encourage modeling groups to perform similar analysis to better understand the total energy flow in the atmospheric component of Earth system models. As has been demonstrated in this paper there can easily be compensating errors in the system which can not be identified without a detailed TE analysis. {\color{red}{The analysis in this paper only considers $1^{\circ}$ horizontal resolution and 32 levels in the vertical. The TE numbers and clipping results may not be accurate for other choices of horizontal and, in particular, vertical resolutions.}}
 
 %Text here ===>>>
 
@@ -797,7 +797,7 @@ A purpose of this paper is to better understand the energy characteristics of CA
 
 
 \acknowledgments
-The National Center for Atmospheric Research is sponsored by the National Science Foundation. Computing resources ({\url{doi:10.5065/D6RX99HX}}) were provided by the Climate Simulation Laboratory at NCAR's Computational and Information Systems Laboratory, sponsored by the National Science Foundation and other agencies. The data used to perform the energy analysis can be found at {\url{https://github.com/PeterHjortLauritzen/2018-JAMES-energy}}.
+{\color{red}{We thank one anonymous reviewer, Hui Wan and Phil Rasch for their helpful comments that significantly improved the clarity of the manuscript}}. The National Center for Atmospheric Research is sponsored by the National Science Foundation. Computing resources ({\url{doi:10.5065/D6RX99HX}}) were provided by the Climate Simulation Laboratory at NCAR's Computational and Information Systems Laboratory, sponsored by the National Science Foundation and other agencies. The data used to perform the energy analysis can be found at {\url{https://github.com/PeterHjortLauritzen/2018-JAMES-energy}}.
 
 
 
