FINAL REVISED VERSION

--- a/src/bib.bib
+++ b/src/bib.bib
@@ -4333,16 +4333,14 @@ doi = {10.1175/1520-0493(1997)125<2293:ROTBSC>2.0.CO;2},
 }
 
 @Article{JW2010LNCSE,
-author="Jablonowski, Christiane and Williamson, David L.",
+  author={Jablonowski, Christiane and Williamson, David L.},
   title = 	 {The Pros and Cons of Diffusion, Filters and Fixers in Atmospheric General Circulation Models, in: {P}.{H}. {L}auritzen, {R}.{D}. {N}air, {C}. {J}ablonowski, {M}. {T}aylor ({E}ds.), {N}umerical Techniques for Global Atmospheric Models},
   journal = 	 {Lecture Notes in Computational Science and Engineering, {S}pringer},
   year = 	 {2011},
-  OPTkey = 	 {},
   volume = 	 {80},
-  OPTnumber = 	 {},
-  pages="381--493",
-  doi="10.1007/978-3-642-11640-7_13"
-  url="https://doi.org/10.1007/978-3-642-11640-7_13"
+  pages={381-493},
+  doi={10.1007/978-3-642-11640-7_13},
+  url={https://doi.org/10.1007/978-3-642-11640-7_13}
 }
 
 
@@ -7946,13 +7944,16 @@ author = "Mark Ainsworth",
 }
 
 @Article{water-leak,
-AUTHOR = {Zhang, K. and Rasch, P. J. and Taylor, M. A. and Wan, H. and Leung, L.-Y. R. and Ma, P.-L. and Golaz, J.-C. and Wolfe, J. and Lin, W. and Singh, B. and Burrows, S. and Yoon, J.-H. and Wang, H. and Qian, Y. and Tang, Q. and Caldwell, P. and Xie, S.},
-TITLE = {Impact of numerical choices on water conservation in the E3SM Atmosphere Model Version 1 (EAM V1)},
-JOURNAL = {Geoscientific Model Development Discussions},
-VOLUME = {2017},
-YEAR = {2017},
-PAGES = {1--26},
-DOI = {10.5194/gmd-2017-293}
+AUTHOR = {Zhang, K. and Rasch, P. J. and Taylor, M. A. and Wan, H. and Leung, R. and Ma, P.-L. and Golaz, J.-C. and Wolfe, J. and Lin, W. and Singh, B. and Burrows, S. and Yoon, J.-H. and Wang, H. and Qian, Y. and Tang, Q. and Caldwell, P. and Xie, S.},
+TITLE = {Impact of numerical choices on water conservation in the {E3SM} Atmosphere
+Model version 1 ({EAM}v1)},
+JOURNAL = gmd,
+VOLUME = {11},
+YEAR = {2018},
+NUMBER = {5},
+PAGES = {1971--1988},
+URL = {https://www.geosci-model-dev.net/11/1971/2018/},
+DOI = {10.5194/gmd-11-1971-2018}
 }
 
 @article {LetAl2018JAMES,
@@ -8035,7 +8036,7 @@ pages={3610-3624},
 
 @Article{B2000S,
 author = {B.A. Boville},
-  title = 	 {Toward a complete model of the climate system in {N}umerical {M}odeling of the {G}lobal {A}tmosphere in the {C}limate {S}ystem}, in: P. Mote and A. O'Neill ({E}ds.), Numerical Modeling of the Global Atmosphere in the Climate System},
+  title = 	 {Toward a complete model of the climate system in {N}umerical {M}odeling of the {G}lobal {A}tmosphere in the {C}limate {S}ystem, in: {P}. {M}ote and {A}. {O}'{N}eill ({E}ds.), {N}umerical {M}odeling of the {G}lobal {A}tmosphere in the {C}limate System},
   journal = 	 {Numerical Modeling of the Global Atmosphere in the Climate System},
   year = 	 {2000},
   OPTkey = 	 {},
@@ -8043,7 +8044,7 @@ author = {B.A. Boville},
   OPTmonth = 	 {},
   OPTnote = 	 { },
   publisher = {Springer Netherlands},
-  pages = {419-442}
+  pages = {419-442},
   DOI = 	 {10.1007/978-3-642-11640-7_12}
 }
 
@@ -8123,24 +8124,6 @@ number = {684},
 pages = {2223-2234},
 doi = {10.1002/qj.2291}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 @article{doi:10.1002/2014MS000368,
